--- a/javascript_lecture/ex04-if.html
+++ b/javascript_lecture/ex04-if.html
@@ -16,13 +16,13 @@
         var book3 = "3: 멀티미디어 배움터 2.0";9
         var book_list = book1 + "\n" + book2 + "\n" + book3;
         var choice = prompt("책 번호를 입력하세요...\n" + book_list, "1");
-        if (choice == "1")
+        if (choice == "1"){
         title = book1;
-        else if (choice == "2")
+        }else if (choice == "2"){
         title = book2;
-        else if (choice == "3")
+        }else if (choice == "3"){
         title = book3;
-        else {
+        }else {
         alert("리스트에 없는 책을 선택하셨습니다.");
         title = "헐랭";
         }
